--- a/style.css
+++ b/style.css
@@ -2,20 +2,48 @@ body,
 html {
     width: 100%;
     height: 100%;
-    margin:0;
-    padding:0;
+    margin: 0;
+    padding: 0;
     box-sizing: border-box;
 }
-.list-container{
+
+.list-container {
     display: flex;
+    flex-direction: column;
     width: 100%;
     padding: 0;
+    box-sizing: border-box;
 }
-.list-container .list-item{
+
+.list-container .list-item {
     width: 100%;
-    padding:10px;
-    flex-direction: column;
+    padding: 30px;
+    position: relative;
+    box-sizing: border-box;
 }
-.list-container .list-item img{
+
+.list-container .list-item img,
+.list-container .list-item span {
+    float: left;
+}
+
+.list-container .list-item img {
+    max-width: 70%;
+}
+
+.list-container .list-item span {
+    position: absolute;
+    padding-left: calc(70% + 20px);
+    top: 60%;
+    transform: translateY(-60%);
+    font-size: 2rem;
+    color: red;
+}
+.detail-container{
+    width: 100%;
+    box-sizing: border-box;
+    padding: 20px;
+}
+.detail-container img{
     max-width: 100%;
 }
